10 8 22 (#13)
* 🎉 Source Recharge: increase `unit_test` cov, fix schemas (#14902)

* Fix formatting (#14968)

* Validate only on incremental (#14966)

* Validate only on incremental

* Add test

* Format and pmd

* Update test

* PR comments

* Update airbyte-protocol/protocol-models/src/test/java/io/airbyte/protocol/models/CatalogHelpersTest.java

Co-authored-by: Lake Mossman <lake@airbyte.io>

* Fix test

Co-authored-by: Lake Mossman <lake@airbyte.io>

* fix build: update mysqlsource with new constructor (#14974)

* chore: add elasticsearch to documentation (#14948)

* Upgrade platform to openjdk:19-slim-bullseye (#14971)

The openjdk 17 image has multiple critical vulnerabilities. This is no longer updated frequently since 17 is now in LTS and not actively developed on.

The JDK 19 images do not have any critical or high or medium vulnerabilities. Further, JVM has bytecode backwards compatibility guarantees. Here we update all of Cloud to use openjdk 19 slim to fix these holes.

Leave gradle code compilation at 17 for now.

Co-authored-by: Davin Chia <davinchia@gmail.com>

* Update chart.yaml readme. (#14975)

The release action is failing because https://github.com/airbytehq/airbyte/runs/7477005935?check_suite_focus=true some values are not up to date.

* 📝 improve error message when using unsupported JDBC type as cursor (#14714)

* improve error message

* also in JdbcSourceOperations

* bump versions + changelog

* auto-bump connector version [ci skip]

* auto-bump connector version [ci skip]

* auto-bump connector version [ci skip]

* auto-bump connector version [ci skip]

* auto-bump connector version [ci skip]

* auto-bump connector version [ci skip]

* auto-bump connector version [ci skip]

Co-authored-by: Octavia Squidington III <octavia-squidington-iii@users.noreply.github.com>

* Normalization for Snowflake destination: added support for key pair authentication (#14792)

* Normalization